added floating-point input support - parsing of floating-point numbers - updated Makefile - updated man page

--- a/haskalc.1
+++ b/haskalc.1
@@ -1,4 +1,4 @@
-.TH haskalc 1 "2021-09-17" "Benjamin Stürz"
+.TH haskalc 1 "2021-09-23" "Benjamin Stürz"
 
 .SH NAME
 haskalc - a calculator written in the Haskell programming language
@@ -12,8 +12,10 @@ haskalc - a calculator written in the Haskell programming language
 is a simple calculator written in the Haskell programming language.
 
 .SH USAGE
-The calculator currently only supports
+The calculator currently supports
 .I integers
+and
+.I floating-point numbers
 and these basic \fIoperators\fR:
 .PP
 .RS 5
