--- a/haskalc.1
+++ b/haskalc.1
@@ -1,4 +1,4 @@
-.TH haskalc 1 "2021-09-23" "Benjamin Stürz"
+.TH haskalc 1 "2021-09-24" "Benjamin Stürz"
 
 .SH NAME
 haskalc - a calculator written in the Haskell programming language
@@ -32,6 +32,9 @@ and these basic \fIoperators\fR:
 .RE
 .RS 5
 % (modulo)
+.RE
+.RS 5
+^ (exponentiation)
 .PP
 To exit the calculator write
 .I exit
