added functions - new functions: (a)sinh, (a)cosh, (a)tanh - fixed functions: asin, acos, atan

--- a/haskalc.1
+++ b/haskalc.1
@@ -35,7 +35,12 @@ and these basic \fIoperators\fR:
 .RE
 .RS 5
 ^ (exponentiation)
+.RE
 .PP
+It also supports variables (like pi) and functions (eg. sin(10)).
+.RE
+As of now, if an error happens during evaluation (\fBevalExpr\fR) it returns 0.
+.RE
 To exit the calculator write
 .I exit
 or send an EOF-character with
