updated man page

--- a/haskalc.1
+++ b/haskalc.1
@@ -1,4 +1,4 @@
-.TH haskalc 1 "2021-09-24" "Benjamin Stürz"
+.TH haskalc 1 "2021-09-27" "Benjamin Stürz"
 
 .SH NAME
 haskalc - a calculator written in the Haskell programming language
@@ -36,10 +36,11 @@ and these basic \fIoperators\fR:
 .RS 5
 ^ (exponentiation)
 .RE
+.RS 5
+= (assignment)
+.RE
 .PP
 It also supports variables (like pi) and functions (eg. sin(10)).
-.RE
-As of now, if an error happens during evaluation (\fBevalExpr\fR) it returns 0.
 .RE
 To exit the calculator write
 .I exit
