updated man page

--- a/haskalc.1
+++ b/haskalc.1
@@ -1,4 +1,4 @@
-.TH haskalc 1 "2021-09-27" "Benjamin Stürz"
+.TH haskalc 1 "2021-10-01" "Benjamin Stürz"
 
 .SH NAME
 haskalc - a calculator written in the Haskell programming language
@@ -150,6 +150,16 @@ and
 .I x
 and
 .I y
+
+.SH BUILT-IN VARIABLES
+.B true
+\        - boolean value of true.
+.RE
+.B false
+\       - boolean value of false.
+.RE
+.B pi
+\          - the constant pi.
 
 .PP
 .SH COPYRIGHT
