updated man page & REAME

--- a/haskalc.1
+++ b/haskalc.1
@@ -37,6 +37,12 @@ and these basic \fIoperators\fR:
 ^ (exponentiation)
 .RE
 .RS 5
+< (less than)
+.RE
+.RS 5
+> (greater than)
+.RE
+.RS 5
 = (assignment)
 .RE
 .RS 8
@@ -47,6 +53,18 @@ x = 10 (variable)
 .RE
 .RS 10
 f(x) = 2 * x (function)
+.RE
+.RS 8
+Note: built-in variables and function cannot be overwritten.
+.RE
+.RS 5
+?: (conditional)
+.RE
+.RS 8
+Usage:
+.RE
+.RS 10
+condition ? true_case : false_case
 .RE
 .PP
 To exit the calculator write
