added conversion functions

--- a/haskalc.1
+++ b/haskalc.1
@@ -168,6 +168,16 @@ and
 .I x
 and
 .I y
+.RE
+.B toInt\fR(\fIx\fR)
+\    - convert
+.I x
+to an integer.
+.RE
+.B toFloat\fR(\fIx\fR)
+\  - convert
+.I x
+to a floating-point number.
 
 .SH BUILT-IN VARIABLES
 .B true
